<?xml version="1.0" encoding="utf-8"?>
   <!--
      Copyright (C) 2010 Jason M'Sadoques jlyonm@gmail.com This program is free
      software; you can redistribute it and/or modify it under the terms of the
      GNU General Public License as published by the Free Software Foundation;
      either version 3 of the License, or (at your option) any later version.

      This program is distributed in the hope that it will be useful, but
      WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
      or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
      for more details. You should have received a copy of the GNU General
      Public License along with this program; if not, write to the Free Software
      Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   -->

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/select_loco_screen"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
>
   <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
   >
      <TextView
         android:id="@+id/current_locos_label"
         android:text="@string/current_locos"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:background="#8c8a8c" />
      <TextView
         android:id="@+id/sl_selected_locos"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:text="@string/none"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#888888" />

   </LinearLayout>
   <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
   >
      <TextView
         android:id="@+id/select_loco_label"
         android:text="@string/select_loco"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:background="#8c8a8c" />
      <EditText
         android:id="@+id/loco_address"
         android:layout_width="80sp"
         android:layout_height="wrap_content"
         android:layout_below="@id/select_loco_label"
         android:singleLine="true"
         android:inputType="number"
         android:maxLength="4" />
      <Spinner
         android:id="@+id/address_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/loco_address"
         android:layout_alignBottom="@id/loco_address" />
      <Button
         android:id="@+id/acquire"
         android:text="@string/acquire_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/address_length"
         android:layout_alignBottom="@id/address_length" />
   </RelativeLayout>
   <TextView
      android:text="@string/recent_engines"
      android:textColor="#FFFFFF"
      android:background="#8c8a8c"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
   <ListView
      android:id="@+id/engine_list"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
   >
   </ListView>
   <TextView
      android:id="@+id/sl_footer"
      android:text="@string/none"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
</LinearLayout>
